--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
+     ]
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "pt='.'\n",
+    "str_list2= ' '.join(str_list)+pt\n",
+    "print(str_list2)"
    ]
   },
   {
@@ -50,12 +61,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bread', 'broccoli', 'Bananas', 'Brownie Mix']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "fl3 =[i for i in food_list if i.startswith('b')]+[i for i in food_list if i.startswith('B')]\n",
+    "print(fl3)\n",
+    "#first I made another list with all the element begin with b or B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bread, broccoli, Bananas, Brownie Mix.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pt ='.'\n",
+    "f_l_d = ', '.join(fl3)+pt\n",
+    "print(f_l_d)\n",
+    "#after I insert ', ' add my list 'fl3' plus my point "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bread, broccoli, Bananas, Brownie Mix.\n"
+     ]
+    }
+   ],
+   "source": [
+    "grocery = 'Grocery list: '\n",
+    "food_list2= grocery+ f_l_d\n",
+    "print(food_list2)\n",
+    "#create my list for the grocery with '+' the str grocery "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bread, broccoli, bananas, brownie mix.\n"
+     ]
+    }
+   ],
+   "source": [
+    "food_list_b= food_list2.capitalize()\n",
+    "print(food_list_b)\n",
+    "#capitalize = the first letter of teh first world in the sentence is upper "
    ]
   },
   {
@@ -69,28 +158,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "\n",
+    "from math import*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "string1 = \"The area of the circle with radius:\"\n",
     "string2  = \"is:\"\n",
     "radius = 4.5\n",
+    "a= pi*radius*radius"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The area of the circle with radius: 4.5 is: 63.61725123519331'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#def area(x, pi = math.pi):\n",
     "\n",
-    "def area(x, pi = math.pi):\n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
-    "    \n",
+    "\n",
     "    # Sample input: 5.0\n",
     "    # Sample Output: 78.53981633\n",
-    "    \n",
+    "\n",
+    "\n",
+    "# Your output string here\n",
     "    # Your code here:\n",
     "    \n",
-    "    \n",
-    "# Your output string here:"
+    "f'{string1} {radius} {string2 } {a}'"
    ]
   },
   {
@@ -106,9 +223,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'Some', 'say', 'in', 'ice', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +245,30 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "poem1=poem.replace(',',' ').replace('.',' ').replace('\\n',' ')\n",
+    "#print(poem1)\n",
+    "poem2= poem1.split()\n",
+    "print(poem2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'also': 1, 'fire': 2, 'And': 1, 'twice': 1, 'end': 1, 'From': 1, 'suffice': 1, 'tasted': 1, 'I’ve': 1, 'in': 2, 'perish': 1, 'I': 3, 'to': 1, 'those': 1, 'Is': 1, 'that': 1, 'But': 1, 'with': 1, 'world': 1, 'To': 1, 'know': 1, 'if': 1, 'Some': 2, 'of': 2, 'had': 1, 'great': 1, 'it': 1, 'would': 1, 'say': 3, 'favor': 1, 'enough': 1, 'hate': 1, 'destruction': 1, 'what': 1, 'the': 1, 'who': 1, 'think': 1, 'ice': 2, 'will': 1, 'hold': 1, 'for': 1, 'desire': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dct={}\n",
+    "dct={i:poem2.count(i) for i in set(poem2)}\n",
+    "print(dct)"
    ]
   },
   {
@@ -132,13 +280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i was angry with my friend   i told my wrath  my wrath did end  i was angry with my foe   i told it not  my wrath did grow    and i waterd it in fears  night   morning with my tears   and i sunned it with smiles  and with soft deceitful wiles    and it grew both day and night   till it bore an apple bright   and my foe beheld it shine  and he knew that it was mine    and into my garden stole   when the night had veild the pole   in the morning glad i see   my foe outstretched beneath the tree \n"
+     ]
+    }
+   ],
    "source": [
-    "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
+    "#import string\n",
     "\n",
-    "poem = \"\"\"I was angry with my friend; \n",
+    "poem_1 = \"\"\"I was angry with my friend; \n",
     "I told my wrath, my wrath did end.\n",
     "I was angry with my foe: \n",
     "I told it not, my wrath did grow. \n",
@@ -158,7 +314,53 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "poem_2=poem_1.replace(',',' ').replace('.',' ').replace(':',' ').replace('\\n',' ').replace(':',' ').replace(';',' ').replace('&',' ')\n",
+    "#   .ponctuation\n",
+    "poem_3 =poem_2.lower()\n",
+    "print(poem_3)\n",
+    "#for i in poem_1:\n",
+    "#    if i poem_1.punctuation:\n",
+    "#        poem_1.remove(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'it', 'not', 'my', 'wrath', 'did', 'grow', 'and', 'i', 'waterd', 'it', 'in', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'and', 'i', 'sunned', 'it', 'with', 'smiles', 'and', 'with', 'soft', 'deceitful', 'wiles', 'and', 'it', 'grew', 'both', 'day', 'and', 'night', 'till', 'it', 'bore', 'an', 'apple', 'bright', 'and', 'my', 'foe', 'beheld', 'it', 'shine', 'and', 'he', 'knew', 'that', 'it', 'was', 'mine', 'and', 'into', 'my', 'garden', 'stole', 'when', 'the', 'night', 'had', 'veild', 'the', 'pole', 'in', 'the', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'the', 'tree']\n"
+     ]
+    }
+   ],
+   "source": [
+    "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
+    "poem_4 = poem_3.split()\n",
+    "print(poem_4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'both', 'fears', 'till', 'end', 'beheld', 'waterd', 'when', 'was', 'deceitful', 'day', 'wrath', 'night', 'see', 'i', 'shine', 'glad', 'foe', 'that', 'beneath', 'told', 'soft', 'he', 'with', 'sunned', 'wiles', 'garden', 'tears', 'my', 'apple', 'did', 'into', 'friend', 'angry', 'had', 'stole', 'bore', 'tree', 'smiles', 'veild', 'bright', 'morning', 'knew', 'not', 'grew', 'grow', 'pole', 'mine', 'outstretched'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_blacklist=set(blacklist)\n",
+    "set_poem_4=set(poem_4)\n",
+    "blk_pm = set_poem_4 - set_blacklist\n",
+    "print(blk_pm)"
    ]
   },
   {
@@ -169,6 +371,13 @@
     "\n",
     "Sometimes, we would like to perform more complex manipulations of our string. This is where regular expressions come in handy. In the cell below, return all characters that are upper case from the string specified below."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -238,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
