--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "t = ('I',)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I',)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
    ]
   },
   {
@@ -33,11 +54,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "type(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n"
    ]
   },
   {
@@ -55,13 +108,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "u = (\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "tup = t + u\n",
+    "tup\n",
+    "\n",
+    "# Your explanation here\n",
+    "# we can't modify a Tuple so append is not working but '+' join the tuples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "add = 's'\n",
+    "tup_lst = list(tup)\n",
+    "tup_lst.append(add)\n",
+    "print(tup_lst)\n",
+    "**ajouter un element "
    ]
   },
   {
@@ -79,13 +159,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "#tup_tup =(\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "#tup2= tup + tup_tup\n",
+    "#print(tup2)\n",
     "\n",
-    "# Your explanation here\n"
+    "tup= (\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "tup\n",
+    "# Your explanation here\n",
+    "# I cancel the first tuple "
    ]
   },
   {
@@ -103,11 +200,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1= tup[0:4]\n",
+    "tup2 = tup[-4:]\n",
+    "# il faut rester simple// les '[index:index]' selectionne dans le tuple "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n') ('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tup1,tup2)"
    ]
   },
   {
@@ -121,11 +238,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3 =  tup1 + tup2\n",
+    "print(tup3)"
    ]
   },
   {
@@ -137,27 +264,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 4\n",
+      "8\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "a =len(tup1)\n",
+    "b =len(tup2)\n",
+    "print(a,b)\n",
+    "c= a+b\n",
+    "print(c)\n",
+    "d = len(tup3)\n",
+    "print(d)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### What is the index number of `\"h\"` in `tup3`?"
+    "##### What is the index number of `\"h\"` in `tup3`?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "h =  tup3.index('h')\n",
+    "print(h)"
    ]
   },
   {
@@ -177,11 +331,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "c\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print(i)"
    ]
   },
   {
@@ -195,12 +363,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "count_a =  tup3.count('a')\n",
+    "count_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_c =  tup3.count('c')\n",
+    "count_c"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
