--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 77, 69, 52, 68, 33, 61, 9, 15, 32, 87, 53, 4, 16, 86, 13, 27, 60, 36, 58, 42, 85, 35, 96, 18, 63, 76, 2, 41, 43, 92, 11, 70, 88, 83, 65, 72, 24, 62, 6, 99, 98, 30, 49, 46, 34, 66, 82, 54, 1, 38, 37, 55, 80, 3, 14, 47, 90, 23, 67, 64, 25, 12, 97, 28, 81, 22, 10, 40, 94, 21, 17, 5, 31, 20, 19, 89, 91, 74, 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1 =random.sample(range(100),k=80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 46, 47, 49, 52, 53, 54, 55, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 74, 76, 77, 80, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 92, 94, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "print(set1)"
    ]
   },
   {
@@ -77,11 +97,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "#sample_list_2 = []\n",
+    "#random.sample(range(100),k=80)\n",
+    "#for i in sample_list_1: \n",
+    "#    sample_list_2 = sample_list_1 in random(80)\n",
+    "#print(sample_list_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[47, 29, 16, 2, 31, 99, 53, 31, 33, 66, 13, 50, 77, 32, 24, 15, 79, 46, 16, 60, 58, 46, 46, 71, 31, 13, 23, 50, 74, 53, 33, 88, 58, 88, 28, 0, 88, 50, 15, 36, 7, 73, 1, 5, 77, 6, 29, 23, 4, 63, 13, 86, 76, 50, 0, 69, 51, 1, 51, 0, 30, 36, 60, 57, 91, 36, 55, 55, 89, 4, 38, 13, 96, 86, 35, 24, 59, 58, 73, 22]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_list_2 = []\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.randint(0, 100))\n",
+    "print(sample_list_2)\n",
+    "# random.randint(begin, ending) // range(la qté voulu)"
    ]
   },
   {
@@ -93,11 +139,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2= set(sample_list_2)\n",
+    "set2\n",
+    "len(set2)"
    ]
   },
   {
@@ -109,11 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 8, 9, 10, 11, 12, 14, 17, 18, 19, 20, 21, 25, 27, 34, 37, 40, 41, 42, 43, 49, 52, 54, 61, 62, 64, 65, 67, 68, 70, 72, 80, 81, 82, 83, 85, 87, 90, 92, 94, 97, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3= set1 - set2\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 71, 73, 79, 50, 51, 57, 59, 29}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4= set2-set1\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 4, 5, 6, 7, 13, 15, 16, 22, 23, 24, 28, 30, 31, 32, 33, 35, 36, 38, 46, 47, 53, 55, 58, 60, 63, 66, 69, 74, 76, 77, 86, 88, 89, 91, 96, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5= set1 & set2\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +255,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "47\n",
+      "42\n",
+      "9\n",
+      "38\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "from math import*\n",
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "print(len(set3))\n",
+    "print(len(set4))\n",
+    "print(len(set5))\n"
    ]
   },
   {
@@ -181,11 +289,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6= set()"
    ]
   },
   {
@@ -197,11 +306,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 46, 47, 49, 52, 53, 54, 55, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 74, 76, 77, 80, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 92, 94, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3,set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +332,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "80\n",
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 46, 47, 49, 52, 53, 54, 55, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 74, 76, 77, 80, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 92, 94, 96, 97, 98, 99}\n",
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set7= set1 & set6\n",
+    "print(len(set1))\n",
+    "print(len(set6))\n",
+    "print(set7)\n",
+    "print(len(set7))\n",
+    "#I check with the set7 all the nb in set1 and set6 after I check the lenght of set1 set6 and set7 and they have the same len"
    ]
   },
   {
@@ -229,11 +365,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set8 = set1.issubset(set2)\n",
+    "print(set8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "set9 = set1.issubset(set3)\n",
+    "print(set9)"
    ]
   },
   {
@@ -247,11 +411,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 46, 47, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 76, 77, 79, 80, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 92, 94, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set10= set3.union(set4,set5)\n",
+    "print(set10)\n",
+    "\n",
+    "#Return a set that contains all items from both sets, duplicates are excluded:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 46, 47, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 76, 77, 79, 80, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 92, 94, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set11= set1.union(set2)\n",
+    "print(set11)"
    ]
   },
   {
@@ -263,11 +457,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set12= set1.pop()\n",
+    "print(set12)\n",
+    "#Remove a random item from the set and don't show it after (hangman!!!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 6, 7, 8, 10, 12, 13, 14, 15, 16, 17, 18, 20, 22, 23, 24, 25, 27, 28, 30, 32, 33, 34, 35, 36, 37, 38, 40, 42, 43, 46, 47, 52, 53, 54, 55, 58, 60, 62, 63, 64, 65, 66, 67, 68, 70, 72, 74, 76, 77, 80, 82, 83, 85, 86, 87, 88, 90, 92, 94, 96, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set1)"
    ]
   },
   {
@@ -283,11 +506,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "# set13=set()\n",
+    "for i in list_to_remove:\n",
+    "    if i in set1:\n",
+    "        set1.remove(i)\n",
+    "# set13 = set1\n",
+    "        "
    ]
   }
  ],
@@ -307,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
