--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -174,27 +174,49 @@
     "string1 = \"The area of the circle with radius:\"\n",
     "string2  = \"is:\"\n",
     "radius = 4.5\n",
-    "a= pi*radius*radius"
+    "a= pi*radius*radius\n",
+    "f'{string1} {radius} {string2 } {a}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The area of the circle with radius: 4.5 is: 63.61725123519331'"
+       "3.141592653589793"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#def area(x, pi = math.pi):\n",
+    "math.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63.61725123519331\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "x=4.5\n",
+    "def area(x, pi = math.pi):\n",
+    "    a= pi*x*x\n",
+    "    return a\n",
     "\n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
@@ -206,8 +228,8 @@
     "\n",
     "# Your output string here\n",
     "    # Your code here:\n",
-    "    \n",
-    "f'{string1} {radius} {string2 } {a}'"
+    "print(area(x))   \n",
+    "\n"
    ]
   },
   {
@@ -381,14 +403,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The', 'Petals']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "poem_poem = poem.split()\n",
+    "charac = [i for i in poem_poem if i.istitle()]\n",
+    "print(charac)"
    ]
   },
   {
@@ -400,13 +433,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "\n",
-    "# Your code here:\n"
+    "t = '123abc'\n",
+    "import re\n",
+    "# Your code here:\n",
+    "# data_nb= []\n",
+    "# for i in data:\n",
+    "#     if i in data:\n",
+    "#         re.search[0,9]\n",
+    "#         data. \n",
+    "#         print()\n",
+    "print(re.findall('[0-9]', t))    "
    ]
   },
   {
