--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -40,6 +40,7 @@
     }
    ],
    "source": [
+    "\n",
     "t"
    ]
   },
@@ -75,22 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n"
+    "#My variable is a tuple "
    ]
   },
   {
@@ -130,13 +120,15 @@
     "tup\n",
     "\n",
     "# Your explanation here\n",
-    "# we can't modify a Tuple so append is not working but '+' join the tuples"
+    "\n",
+    "# I created a tuple 'tup' where I joined the tuple t and u together with '+', because a Tuple couldn't be modify."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "it was a test for me//\n",
     "add = 's'\n",
     "tup_lst = list(tup)\n",
     "tup_lst.append(add)\n",
@@ -182,7 +174,8 @@
     "tup= (\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
     "tup\n",
     "# Your explanation here\n",
-    "# I cancel the first tuple "
+    "\n",
+    "# I cancel the first tuple with a copy/paste in my 'tup'"
    ]
   },
   {
@@ -207,6 +200,9 @@
     "# Your code here\n",
     "tup1= tup[0:4]\n",
     "tup2 = tup[-4:]\n",
+    "\n",
+    "#tup1 : I print from index 0 to 4 \n",
+    "#tup2 : I print from teh 4th to the end (-4 , -3, -2, -1)\n",
     "# il faut rester simple// les '[index:index]' selectionne dans le tuple "
    ]
   },
@@ -380,12 +376,13 @@
    "source": [
     "# Your code here\n",
     "count_a =  tup3.count('a')\n",
-    "count_a"
+    "count_a\n",
+    "# the number of occurrence for 'a' is 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -394,14 +391,15 @@
        "1"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "count_c =  tup3.count('c')\n",
-    "count_c"
+    "count_c\n",
+    "# the number of occurrence for 'c' is 1"
    ]
   },
   {
