--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -396,14 +396,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import re"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +423,9 @@
     "# Your code here:\n",
     "poem_poem = poem.split()\n",
     "charac = [i for i in poem_poem if i.istitle()]\n",
-    "print(charac)"
+    "print(charac)\n",
+    "\n",
+    "#re.findall('[A-Z]',poem)"
    ]
   },
   {
@@ -433,21 +437,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '2', '3']\n"
+      "{'123abc', 'abc123', 'JohnSmith1', 'JANE', 'ABBY4'}\n"
      ]
     }
    ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "t = '123abc'\n",
-    "import re\n",
+    "#set_data = set(data)\n",
+    "print(set_data)\n",
+    "#pattern = [0-9]\n",
+    "#import re\n",
     "# Your code here:\n",
     "# data_nb= []\n",
     "# for i in data:\n",
@@ -455,7 +461,34 @@
     "#         re.search[0,9]\n",
     "#         data. \n",
     "#         print()\n",
-    "print(re.findall('[0-9]', t))    "
+    "#print(re.findall(pattern, set_data))   \n",
+    "#[\\d]\n",
+    "# s = r'abc123d, hello 3.1415926, this is my book'\n",
+    "# print map(ast.literal_eval,re.findall(r'-?[0-9]+(?:\\.[0-9]*)?|-?\\.[0-9]+',s))\n",
+    "# pattern = r'[0-9]+'\n",
+    "# for i in data:\n",
+    "#     if i in data:\n",
+    "#            print (re.findall(pattern,data[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in data if re.search('\\d',i)]"
    ]
   },
   {
@@ -474,10 +507,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "[i for i in data if re.search('\\d[A-Za-z]|[A-Za-z]\\d',i)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
