--- a/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,33 +49,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_keys(['love', 'conversation', 'every', \"we're\", 'plate', 'sour', 'jukebox', 'now', 'taxi', 'fast', 'bag', 'man', 'push', 'baby', 'going', 'you', \"don't\", 'one', 'mind', 'backseat', 'friends', 'then', 'know', 'take', 'play', 'okay', 'so', 'begin', 'start', 'over', 'body', 'boy', 'just', 'we', 'are', 'girl', 'tell', 'singing', 'drinking', 'put', 'our', 'where', \"i'll\", 'all', \"isn't\", 'make', 'lover', 'get', 'radio', 'give', \"i'm\", 'like', 'can', 'doing', 'with', 'club', 'come', 'it', 'somebody', 'handmade', 'out', 'new', 'room', 'chance', 'follow', 'in', 'may', 'brand', 'that', 'magnet', 'up', 'first', 'and', 'pull', 'of', 'table', 'much', 'last', 'i', 'thrifty', 'grab', 'was', 'driver', 'slow', 'dance', 'the', 'say', 'trust', 'family', 'week', 'date', 'me', 'do', 'waist', 'smell', 'day', 'although', 'your', 'leave', 'want', \"let's\", 'lead', 'at', 'hand', 'how', 'talk', 'not', 'eat', 'falling', 'about', 'story', 'sweet', 'best', 'crazy', 'let', 'too', 'van', 'shots', 'go', 'to', 'a', 'my', 'is', 'place', 'find', 'shape', 'on', 'kiss', 'were', 'night', 'heart', 'for', 'discovering', 'something', 'be', 'bedsheets', 'fill', 'hours', 'stop', 'bar'])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "love\n",
+      "conversation\n",
+      "every\n",
+      "we're\n",
+      "plate\n",
+      "sour\n",
+      "jukebox\n",
+      "now\n",
+      "taxi\n",
+      "fast\n",
+      "bag\n",
+      "man\n",
+      "push\n",
+      "baby\n",
+      "going\n",
+      "you\n",
+      "don't\n",
+      "one\n",
+      "mind\n",
+      "backseat\n",
+      "friends\n",
+      "then\n",
+      "know\n",
+      "take\n",
+      "play\n",
+      "okay\n",
+      "so\n",
+      "begin\n",
+      "start\n",
+      "over\n",
+      "body\n",
+      "boy\n",
+      "just\n",
+      "we\n",
+      "are\n",
+      "girl\n",
+      "tell\n",
+      "singing\n",
+      "drinking\n",
+      "put\n",
+      "our\n",
+      "where\n",
+      "i'll\n",
+      "all\n",
+      "isn't\n",
+      "make\n",
+      "lover\n",
+      "get\n",
+      "radio\n",
+      "give\n",
+      "i'm\n",
+      "like\n",
+      "can\n",
+      "doing\n",
+      "with\n",
+      "club\n",
+      "come\n",
+      "it\n",
+      "somebody\n",
+      "handmade\n",
+      "out\n",
+      "new\n",
+      "room\n",
+      "chance\n",
+      "follow\n",
+      "in\n",
+      "may\n",
+      "brand\n",
+      "that\n",
+      "magnet\n",
+      "up\n",
+      "first\n",
+      "and\n",
+      "pull\n",
+      "of\n",
+      "table\n",
+      "much\n",
+      "last\n",
+      "i\n",
+      "thrifty\n",
+      "grab\n",
+      "was\n",
+      "driver\n",
+      "slow\n",
+      "dance\n",
+      "the\n",
+      "say\n",
+      "trust\n",
+      "family\n",
+      "week\n",
+      "date\n",
+      "me\n",
+      "do\n",
+      "waist\n",
+      "smell\n",
+      "day\n",
+      "although\n",
+      "your\n",
+      "leave\n",
+      "want\n",
+      "let's\n",
+      "lead\n",
+      "at\n",
+      "hand\n",
+      "how\n",
+      "talk\n",
+      "not\n",
+      "eat\n",
+      "falling\n",
+      "about\n",
+      "story\n",
+      "sweet\n",
+      "best\n",
+      "crazy\n",
+      "let\n",
+      "too\n",
+      "van\n",
+      "shots\n",
+      "go\n",
+      "to\n",
+      "a\n",
+      "my\n",
+      "is\n",
+      "place\n",
+      "find\n",
+      "shape\n",
+      "on\n",
+      "kiss\n",
+      "were\n",
+      "night\n",
+      "heart\n",
+      "for\n",
+      "discovering\n",
+      "something\n",
+      "be\n",
+      "bedsheets\n",
+      "fill\n",
+      "hours\n",
+      "stop\n",
+      "bar\n"
+     ]
     }
    ],
    "source": [
     "# Your code here\n",
     "#prendre les keys et les mettre dans une liste\n",
     "keys=[]\n",
-    "word_freq.keys()\n",
-    "\n",
-    "#all_keys = set().union(*(d.keys() for d in mylist))\n",
-    "# import operator\n",
-    "# all_keys =sorted(word_freq.items(), key=operator.itemgetter(1))\n",
-    "# print(all_keys)\n",
-    "#for i,j in word_freq.items():\n",
-    "#    keys.append(i)\n",
-    "#    print(keys)"
+    "for keys in word_freq.keys():\n",
+    "    print(keys)"
    ]
   },
   {
@@ -112,11 +241,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n",
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "import operator\n",
+    "\n",
+    "word_freq2 ={}\n",
+    "\n",
+    "sorted(word_freq.items(), key=operator.itemgetter(1))\n",
+    "\n",
+    "for i,j in word_freq.items():\n",
+    "    word_freq2.items() == sorted_tups\n",
+    "    print(word_freq2)"
    ]
   },
   {
